--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="shortcut icon" href="images/tab-icon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link rel="stylesheet" href="style.css">
     <title>Shades</title>
 </head>
@@ -145,6 +147,7 @@
     </div>   
 </header>
 <main>
+
     <div class="container">
         <div class="row registration-row">
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 col-xl-6 col-order-2">
@@ -174,6 +177,19 @@
         </div>
     </div>
 
+    <div class="container slider-block">
+        <div class="row slider-row">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-xs-12 col-sm-12 slider-container">
+                <div class="slider-title"><p>OUR PROJECTS</p></div>
+                <div class="slider">
+                    <div><img src="images/slider/project-1.png" alt="" class="slider-img"></div> 
+                    <div> <img src="images/slider/project-2.png" alt="" class="slider-img"></div>
+                    <div><img src="images/slider/project-3.png" alt="" class="slider-img"></div>
+                    <div><img src="images/slider/project-4.png" alt="" class="slider-img"></div>
+                  </div>
+            </div>
+        </div>
+    </div>
     <div class="shape">
     <div class="shape-img">
         <img src="images/landing-1-shape.svg" alt="" > 
@@ -502,5 +518,9 @@
     </footer>
 
 </body>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
 <script src="app.js"></script>
+
 </html>
